[gd_scene load_steps=9 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2SmallBaby.png" type="Texture" id=1]
[ext_resource path="res://Babies/SmallBaby.gd" type="Script" id=3]
[ext_resource path="res://Weapons/BabyTech9.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/BabyTech9X.tscn" type="PackedScene" id=5]
[ext_resource path="res://Weapons/Dagger.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Stationary"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.5, 26.5 )

[node name="SmallBaby" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -11, 19, 11, 19, 8, -12, 0, -21, -8, -12 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomHand" type="Sprite" parent="."]
position = Vector2( 0, -11 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -18 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="TopHand" type="Sprite" parent="."]
position = Vector2( 0, -11 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="BabyTech9" parent="TopHand" instance=ExtResource( 4 )]
visible = false
position = Vector2( -7, 4 )
scale = Vector2( 1.33333, 1.33333 )

[node name="BabyTech9X" parent="TopHand" instance=ExtResource( 5 )]
position = Vector2( -5, -3 )
scale = Vector2( 1.33333, 1.33333 )

[node name="Dagger" parent="TopHand" instance=ExtResource( 6 )]
show_behind_parent = true
position = Vector2( 9, -2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stationary"
anims/Stationary = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -7.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="TopHand/Dagger/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TopHand/Dagger/Timer" to="." method="_on_DaggerTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="TopHand/Dagger"]
